Fix alignment of Section Footer

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -7,6 +7,7 @@
 
   p {
     margin-bottom: 0;
+    text-align: inherit;
   }
 
   a {
